<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent66">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <ImageView
        android:id="@+id/ivLogoApp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_app"
        app:layout_constraintBottom_toBottomOf="@id/guidelineVe"
        app:layout_constraintEnd_toEndOf="@id/guidelineHo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimenLv2"
        android:text="@string/app_decryption"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeHeaderMedium"
        app:layout_constraintBottom_toBottomOf="@id/ivLogoApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivLogoApp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSlogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimenLv1"
        android:layout_marginEnd="@dimen/dimenLv2"
        android:text="@string/slogan"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeBodyTiny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvAppName"
        app:layout_constraintTop_toBottomOf="@id/tvAppName" />

    <TextView
        android:id="@+id/tvOurTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimenLv3"
        android:layout_marginTop="@dimen/dimenLv2"
        android:text="@string/our_team"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeBodySmall"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineVe" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOurTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:padding="@dimen/dimenLv3"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvOurTeam" />
</androidx.constraintlayout.widget.ConstraintLayout>


