<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeFragment">

        <ImageView
            android:id="@+id/ivHomeBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/sample"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewMiniInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_opacity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenLv3"
            android:layout_marginTop="@dimen/dimenLv8"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSizeHeaderLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hi" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSizeHeaderGiant"
            app:layout_constraintLeft_toLeftOf="@id/tvGreeting"
            app:layout_constraintTop_toBottomOf="@id/tvGreeting"
            tools:text="30" />

        <TextView
            android:id="@+id/tvNoCurrentData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_no_data"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSizeBodyMedium"
            app:layout_constraintBottom_toBottomOf="@id/tvTemperature"
            app:layout_constraintStart_toStartOf="@id/tvGreeting"
            app:layout_constraintTop_toTopOf="@id/tvTemperature" />

        <TextView
            android:id="@+id/tvDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenLv2"
            android:text="@string/degree"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSizeHeaderMedium"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/tvTemperature"
            app:layout_constraintTop_toTopOf="@id/tvTemperature" />

        <TextView
            android:id="@+id/tvAlert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimenLv2"
            android:layout_marginEnd="@dimen/dimenLv3"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSizeBodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvGreeting"
            app:layout_constraintTop_toBottomOf="@id/tvTemperature"
            tools:text="@string/alert_lv0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_days"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSizeBodySmall"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/spinnerDay"
            app:layout_constraintStart_toStartOf="@id/spinnerDay" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenLv3"
            android:layout_marginBottom="@dimen/dimenLv2"
            android:padding="@dimen/dimenLv2"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@id/rvMiniInfo"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/tvAppVersion"
            app:layout_constraintGuide_percent="0.6"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMiniInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimenLv3"
            android:layout_marginEnd="@dimen/dimenLv3"
            android:layout_marginBottom="@dimen/dimenLv3"
            android:background="@drawable/background_round_corner"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dimenLv2"
            android:paddingEnd="@dimen/dimenLv2"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/tvAppVersion"
            app:layout_constraintTop_toBottomOf="@id/guideline" />


        <ProgressBar
            android:id="@+id/pbMiniTemperature"
            android:layout_width="@dimen/dimenLv3"
            android:layout_height="@dimen/dimenLv3"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorStatusBar"
            android:indeterminateTintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="@id/rvMiniInfo"
            app:layout_constraintEnd_toEndOf="@id/rvMiniInfo"
            app:layout_constraintStart_toStartOf="@id/rvMiniInfo"
            app:layout_constraintTop_toTopOf="@id/rvMiniInfo" />

        <TextView
            android:id="@+id/tvNoData"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimenLv3"
            android:layout_marginEnd="@dimen/dimenLv3"
            android:text="@string/no_data"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSizeBodyTiny"
            app:layout_constraintBottom_toBottomOf="@id/spinnerDay"
            app:layout_constraintTop_toTopOf="@id/spinnerDay" />

        <TextView
            android:id="@+id/tvAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimenLv1"
            android:text="@string/app_version"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSizeBodyTiny"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
